fix(security): reduce ZAP false positives
